# arch-lint

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  rule_proposal.yml
crates/arch-lint/: Cargo.toml
crates/arch-lint-cli/: Cargo.toml
crates/arch-lint-cli/src/: config_resolver.rs  main.rs
crates/arch-lint-cli/src/commands/: check.rs  check_ts.rs  init.rs  init_ts.rs  list_rules.rs  mod.rs  output.rs
crates/arch-lint-core/: Cargo.toml
crates/arch-lint-core/src/: analyzer.rs  config.rs  context.rs  lib.rs  preferred_crate.rs  required_crate.rs  rule.rs  types.rs  utils.rs
crates/arch-lint-core/src/declarative/: config_dto.rs  loader.rs  mod.rs  model.rs  rules.rs
crates/arch-lint-core/src/utils/: allowance.rs  attributes.rs  paths.rs
crates/arch-lint-core/tests/: declarative_integration.rs
crates/arch-lint-core/tests/fixtures/declarative/: arch-lint.toml
crates/arch-lint-core/tests/fixtures/declarative/src/app/: handler.rs
crates/arch-lint-core/tests/fixtures/declarative/src/domain/: service.rs
crates/arch-lint-core/tests/fixtures/declarative/src/infra/: db.rs
crates/arch-lint-macros/: Cargo.toml
crates/arch-lint-macros/src/: lib.rs
crates/arch-lint-rules/: Cargo.toml
crates/arch-lint-rules/src/: async_trait_send_check.rs  handler_complexity.rs  lib.rs  no_error_swallowing.rs  no_panic_in_lib.rs  no_silent_result_drop.rs  no_sync_io.rs  no_unwrap_expect.rs  prefer_from_over_into.rs  prefer_utoipa.rs  presets.rs  require_doc_comments.rs  require_thiserror.rs  require_tracing.rs  require_tracing_v2.rs  tracing_env_init.rs
crates/arch-lint-ts/: Cargo.toml
crates/arch-lint-ts/src/: config.rs  engine.rs  extractor.rs  kotlin.rs  layer.rs  lib.rs
crates/arch-lint/src/: lib.rs  runner.rs
crates/arch-lint/tests/: check_macro.rs  test-config.toml
docs/: tree-sitter-engine.md
examples/sample-project/: Cargo.toml  arch-lint.toml  run_arch_lint.sh
examples/sample-project/src/: lib.rs  startup.rs  tracing_test.rs
