[workspace]
resolver = "2"
members = [
    "crates/arch-lint",
    "crates/arch-lint-core",
    "crates/arch-lint-rules",
    "crates/arch-lint-cli",
    "crates/arch-lint-macros",
    "crates/arch-lint-ts",
]

[workspace.package]
version = "0.4.2"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ynishi/arch-lint"
keywords = ["lint", "architecture", "static-analysis", "syn"]
categories = ["development-tools", "command-line-utilities"]

[workspace.dependencies]
# Core parsing
syn = { version = "2", features = ["full", "visit", "parsing", "extra-traits"] }
quote = "1"
proc-macro2 = { version = "1", features = ["span-locations"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
thiserror = "2"
anyhow = "1"
miette = { version = "7", features = ["fancy"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# File operations
glob = "0.3"
walkdir = "2"
ignore = "0.4"

# Async (optional, for future extensions)
tokio = { version = "1", features = ["full"] }

# Testing
insta = { version = "1", features = ["yaml"] }
tempfile = "3"

# Platform
home = "0.5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Internal crates
arch-lint = { path = "crates/arch-lint", version = "0.4.2" }
arch-lint-core = { path = "crates/arch-lint-core", version = "0.4.2" }
arch-lint-rules = { path = "crates/arch-lint-rules", version = "0.4.2" }
arch-lint-cli = { path = "crates/arch-lint-cli", version = "0.4.2" }
arch-lint-macros = { path = "crates/arch-lint-macros", version = "0.4.2" }
arch-lint-ts = { path = "crates/arch-lint-ts", version = "0.4.2" }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
unwrap_used = "warn"
expect_used = "warn"
