[package]
name = "arch-lint-cli"
description = "CLI tool for arch-lint architecture linter"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "arch-lint"
path = "src/main.rs"

[dependencies]
arch-lint-core.workspace = true
arch-lint-rules.workspace = true
arch-lint-ts.workspace = true
ignore.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
miette.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
home.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
