[package]
name = "arch-lint-core"
description = "Core framework for architecture linting - traits, types, and analyzer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
serde.workspace = true
thiserror.workspace = true
miette.workspace = true
glob.workspace = true
walkdir.workspace = true
ignore.workspace = true
tracing.workspace = true
toml.workspace = true

[dev-dependencies]
insta.workspace = true

[lints]
workspace = true
