[package]
name = "arch-lint-rules"
description = "Built-in lint rules for arch-lint"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
arch-lint-core.workspace = true
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
tracing.workspace = true

[dev-dependencies]
insta.workspace = true

[lints]
workspace = true
